# tablint

./: .gitignore  LICENSE  README.md  pyproject.toml
tablint/: __init__.py  columns.py  detect.py  engine.py  sheets.py  structure.py  types.py  verdict.py
tests/: make_samples.py  test_verdicts.py
tests/samples/: multi_table.xlsx
