[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tablint"
version = "0.1.0"
description = "A pure spreadsheet inspection engine: inspect_table(file_path, checks) -> verdict."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "tablint" }]
dependencies = [
    "pandas>=2.0",
    "openpyxl>=3.1",
    "charset-normalizer>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["tablint*"]
exclude = ["tests*"]
